CHG: ZEInterior module has been changed for using new rendering system. ADD: PreRender and Render functions have been added to ZEInterior source. CHG: Minor changes have been made on ZEInteriorResource. ADD: ZEGRVertexBuffer and ZEGRConstantBuffer have been added to ZEInteriorRoom. ADD: PreRender and Render functions have been added to ZEInteriorRoom. CHG: ZEParticle module has been changed for using new rendering system. CHG: ZEParticleBillboardRenderer has been changed for using Tessellation. ADD: PreRender and Render functions have been added to ZEParticleRenderer and ZEParticleBillboardRenderer. ADD: PreRender and Render functions have been added to ZEParticleEffect. ADD: PreRender and Render functions have been added to ZEParticleSystem. ADD: Particle vertex layout has been added to ZEParticleRenderer FIX: Bugs related to dirty flags have been fixed on ZECamera. FIX: Bugs related to dirty flags have been fixed on ZERNFixedMaterial. IMP: Definitions associated with ZERNFixedMaterial.hlsl have been implemented on ZERNFixedMaterial. IMP: ReadFromFile function has been separately implemented with V0 and V1 postfixes on ZERNFixedMaterial. ADD: UpdateShaderDefinitions function has been added to ZERNFixedMaterial. ADD: ReadV0 and ReadV1 functions have been added to ZERNMap FIX: Some bugs related to view constant buffer have been fixed on ZERNRenderer. CHG: ZERNSimpleMaterial has been revised. ADD: SetEnable and GetEnable functions have been added to ZERNStage ADD: Enable bool variable has been added to ZERNStage. ADD: GetNormalMap functions has been added to ZERNStageGBuffer. ADD: Uncharted tone map operator has been added to ZERNStageHDR. ADD: ZERN_STAGE_TEXTURE_OUTPUT definition has been added to ZERNStageID. IMP: Setting output render target depending on whether there is ZERNStagePostProcess has been implemented on ZERNStageLighting. CHG: View constants struct has been revised on ZERNView. ADD: ZERNLightScattering shader file that implements light scattering effect

--- a/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
+++ b/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
@@ -1,6 +1,6 @@
-//ZE_SOURCE_PROCESSOR_START(License, 1.0)
-/*******************************************************************************
- Zinek Engine - ZERNStageID.h
+#ZE_SOURCE_PROCESSOR_START(License, 1.0)
+#[[*****************************************************************************
+ Zinek Engine - CMakeLists.txt
  ------------------------------------------------------------------------------
  Copyright (C) 2008-2021 Yiğit Orçun GÖKBULUT. All rights reserved.
 
@@ -30,32 +30,20 @@
   Name: Yiğit Orçun GÖKBULUT
   Contact: orcun.gokbulut@gmail.com
   Github: https://www.github.com/orcun-gokbulut/ZE
-*******************************************************************************/
-//ZE_SOURCE_PROCESSOR_END()
+*****************************************************************************]]
+#ZE_SOURCE_PROCESSOR_END()
 
-#pragma once
+cmake_minimum_required(VERSION 2.8)
 
-#include "ZETypes.h"
+ze_add_source(ZEATSun.cpp					Sources)
+ze_add_source(ZEATSun.h						Sources Headers)
+ze_add_source(ZEATMoon.cpp					Sources)
+ze_add_source(ZEATMoon.h					Sources Headers)
+ze_add_source(ZEATPeriodicTerms.h			Sources Headers)
+ze_add_source(ZEATCommon.h					Sources Headers)			
 
-typedef ZEUInt32 ZERNStageMask;
-typedef ZEUInt64 ZERNStageID;
-
-// Normal
-#define ZERN_STAGE_ID(ID)						(1<<ID)
-#define ZERN_STAGE_GBUFFER						ZERN_STAGE_ID(1)
-#define ZERN_STAGE_LIGHTING						ZERN_STAGE_ID(2)
-#define ZERN_STAGE_AO							ZERN_STAGE_ID(3)
-#define ZERN_STAGE_FORWARD						ZERN_STAGE_ID(4)
-#define ZERN_STAGE_FORWARD_TRANSPARANT			ZERN_STAGE_ID(5)
-#define ZERN_STAGE_PRE_HDR_EFFECT				ZERN_STAGE_ID(6)
-#define ZERN_STAGE_HDR							ZERN_STAGE_ID(7)
-#define ZERN_STAGE_POST_EFFECT					ZERN_STAGE_ID(8)
-#define ZERN_STAGE_2D							ZERN_STAGE_ID(9)
-#define ZERN_STAGE_POST_2D_EFFECT				ZERN_STAGE_ID(10)
-
-// Shadow Map
-#define ZERN_STAGE_SHADOW_MAP_OMNI				ZERN_STAGE_ID(11)
-#define ZERN_STAGE_SHADOW_MAP_DIRECTIONAL		ZERN_STAGE_ID(12)
-#define ZERN_STAGE_SHADOW_MAP_PROJECTIVE		ZERN_STAGE_ID(13)
-
-#define ZERN_STAGE_TEXTURE_OUTPUT				ZERN_STAGE_ID(14)
+ze_add_library(TARGET ZEAtmosphere 
+	ZEMC ${ZEMC}
+	SOURCES ${Sources}
+	HEADERS ${Headers}
+	LIBS ZEFoundation)
