--- a/Source/ZEEngine/ZEParticle/CMakeLists.txt
+++ b/Source/ZEEngine/ZEParticle/CMakeLists.txt
@@ -37,12 +37,12 @@ cmake_minimum_required(VERSION 2.8)
 
 ze_add_source(ZEParticle.cpp							Sources)
 ze_add_source(ZEParticle.h								Sources Headers ZEMC)
-ze_add_source(ZEParticleModifier.cpp					Sources)
-ze_add_source(ZEParticleModifier.h						Sources Headers)
+#ze_add_source(ZEParticleModifier.cpp					Sources)
+#ze_add_source(ZEParticleModifier.h						Sources Headers)
 ze_add_source(ZEParticleEffect.cpp						Sources)
 ze_add_source(ZEParticleEffect.h						Sources Headers ZEMC)
-ze_add_source(ZEParticleEmitter.cpp						Sources)
-ze_add_source(ZEParticleEmitter.h						Sources Headers ZEMC)
+#ze_add_source(ZEParticleEmitter.cpp						Sources)
+#ze_add_source(ZEParticleEmitter.h						Sources Headers ZEMC)
 ze_add_source(ZEParticleSystem.cpp						Sources)
 ze_add_source(ZEParticleSystem.h						Sources Headers ZEMC)
 ze_add_source(ZEParticleRenderer.cpp					Sources)
