IMP: ZELog log file facilities has been improved and integrated to ZEPathManager. ADD: Options.ini has been updated to enable file logging default. ADD: Logs foldter has been added to Storage folder for storing logs.
svn path=/branches/v0.6.2-CustATrainSimulator/; revision=1789

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -1,6 +1,6 @@
 [Error]
-LogFileEnabled = false
-LogFileName = error.log
+LogFileEnabled = true
+LogFileName = #S:/Logs/ZinekIG-{1}-{0}.log
 
 [ModuleManager]
 ZEGraphicsModule = ZED3D9Module
