CHG: ZEOption callbacks changed from fastdelegates to Zinek implementation ZEDelegate. IMP: ZEErrorManager option code has been fixed. ADD: LogMinimumLevel, LogFileMinimumLevel has been added to Error option section. CHG: LogFileName option has been renamed to LogFilePath. ADD: Computer name and date ZEFormat argument support has been added ZELog::SetLogFilePath function. CHG: Various improvements and refactoring has been made on ZELog. ADD: zeDebugLog (logs every time), zeDebugLogOnce (logs only once), zeDebugLogOccured (log only if occured multiple times) and zeDebugLogPerFrame (log once per frame) functions has been added. ADD: ZERealPath support has been added to SetLogFilePath function. REM: Code comments and unused functions removed from ZELock. ADD: Many debug and info logs has been added to ZETIModule and ZETICommunicationManager.
svn path=/branches/v0.6.2-CustATrainSimulator/; revision=1790

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -1,6 +1,8 @@
 [Error]
+MinimumLevel = Debug
 LogFileEnabled = true
-LogFileName = #S:/Logs/ZinekIG-{1}-{0}.log
+LogFilePath = #S:/Logs/ZinekIG-{1}-{0}.log
+LogFileMinimumLevel = Debug
 
 [ModuleManager]
 ZEGraphicsModule = ZED3D9Module
