ADD: ZETask system has been rewritten from scratch. ADD: VTune spin lock marking code has been added to ZELock. CHG: ZEThread has been simplified and improved. CHG: Lazy initialization support has been added ZESignal. CHG: ZEArray's and ZEList2's IsBegin() and IsEnd() functions of the iterators has been removed in favor of IsValid(). CHG: ZELink has been moved to its own header and source file. FIX: Infinite loop bug in ZEMLFormatXMLV1 has been fixed.
svn path=/trunk/; revision=1798

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ add_definitions(-DZE_EDITION=${ZEBUILD_EDITION_UPPER})
 
 ## Build system initalization
 #########################################################################################
-set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake/External" "${PROJECT_SOURCE_DIR}/CMake" "${CMAKE_MODULE_PATH}")
 
 include(ze)
 ze_init()
