--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -64,6 +64,8 @@ ze_add_source(ZEMaxHeap.cpp				Sources)
 ze_add_source(ZEMaxHeapTests.cpp		Tests)
 ze_add_source(ZEIterator.cpp			Sources)
 ze_add_source(ZEIterator.h				Sources Headers)
+ze_add_source(ZELink.cpp				Sources)
+ze_add_source(ZELink.h					Sources Headers)
 ze_add_source(ZEList2.cpp				Sources)
 ze_add_source(ZEList2.h					Sources Headers)
 ze_add_source(ZEList2Iterator.cpp		Sources)
