CHG: ZERNDeferredShading shader file has been revised. CHG: ZERNFastLightScattering shader file has been revised. CHG: ZERNFiltering shader file has been revised. CHG: ZERNFixedMaterial shader file has been revised. CHG: ZERNGBuffer shader file has been revised. CHG: ZERNHDR shader file has been revised. CHG: ZERNParticleRendering shader file has been revised. CHG: ZERNPrecomputingLightScattering shader file has been revised. CHG: ZERNRenderer shader file has been revised. CHG: ZERNSimpleMaterial shader file has been revised. CHG: ZERNTextureRendering shader file has been revised. CHG: ZERNTiledDeferredShading shader file has been revised. ADD: ZERNMath shader file, which contains constants has been added. ADD: ZERNSSAO shader file, which applies ambient occlusion effect has been added. ADD: ZERNTransformations shader file, which contains space transformation functions has been added. ADD: Keyboard control of ambient occlusion effect for enabling or disabling has been added to ZEGRTestModule.cpp ADD: ZEATCommon source file has been added. ADD: ZEATPeriodicTerms source file has been added. CHG: Static variables have been changed to const on ZEATPeriodicTerms interface file. CHG: Float variable have been changed to double on ZEATPeriodicTerms interface file. CHG: ZEGRSamplerState interface and source file have been revised. CHG: Equals function has been changed to const on ZEGRState. ADD: GenerateMipMaps function has been added to ZEGRTexture2D and ZED11Texture2D. CHG: Vertical fov degree value has been changed to be radian on ZECamera.cpp. IMP: SamplerState and disabling depth-test have been implemented on ZERNFilter.cpp. CHG: AmbientEnabled condition has been commented out on ZERNFixedMaterial.cpp. IMP: SamplerState and additive blending has been implemented on ZERNLightScattering.cpp. IMP: Cpu-side of ambient occlusion effect has been implemented on ZERNStageAO.cpp. ADD: Condition that checks if render target is null has been added to ZERNStageGBuffer.cpp IMP: Samp

--- a/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
+++ b/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
@@ -39,8 +39,10 @@ ze_add_source(ZEATSun.cpp					Sources)
 ze_add_source(ZEATSun.h						Sources Headers)
 ze_add_source(ZEATMoon.cpp					Sources)
 ze_add_source(ZEATMoon.h					Sources Headers)
+ze_add_source(ZEATPeriodicTerms.cpp			Sources)
 ze_add_source(ZEATPeriodicTerms.h			Sources Headers)
-ze_add_source(ZEATCommon.h					Sources Headers)			
+ze_add_source(ZEATCommon.cpp				Sources)
+ze_add_source(ZEATCommon.h					Sources Headers)
 
 ze_add_library(TARGET ZEAtmosphere 
 	ZEMC ${ZEMC}
