ADD: ZEVectord classes (ZEVector2d, ZEVector3d, ZEVector3d) has been moved to ZEVectord.h and its respective files. ADD: ZEMatrixd classes (ZEMatrix3x3d, ZEMatrix4x4d) has been moved to ZEMatrixd.h and its respective files. CHG: Original ZEVector and ZEMatrix classes have been reverted to their previous revision.
svn path=/branches/v0.6.2-ZETrainIG/; revision=1816

--- a/Source/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMath/CMakeLists.txt
@@ -56,6 +56,9 @@ ze_add_source(ZEMatrix.cpp				Sources)
 ze_add_source(ZEMatrix3x3Tests.cpp		Tests)
 ze_add_source(ZEMatrix4x4Tests.cpp		Tests)
 ze_add_source(ZEMatrix.h				Sources Headers)
+ze_add_source(ZEMatrixdGeneric.cpp		Sources)
+ze_add_source(ZEMatrixd.cpp				Sources)
+ze_add_source(ZEMatrixd.h				Sources Headers)
 ze_add_source(ZEOBBox.cpp				Sources)
 ze_add_source(ZEOBBox.h					Sources Headers)
 ze_add_source(ZEOBBoxTests.cpp			Tests)
@@ -77,6 +80,9 @@ ze_add_source(ZERectangle3DTests.cpp	Tests)
 ze_add_source(ZETriangle.cpp			Sources)
 ze_add_source(ZETriangle.h				Sources Headers)
 ze_add_source(ZETriangleTests.cpp		Tests)
+ze_add_source(ZEVectordGeneric.cpp		Sources)
+ze_add_source(ZEVectord.cpp				Sources)
+ze_add_source(ZEVectord.h				Sources Headers)
 ze_add_source(ZEVector.cpp				Sources)
 ze_add_source(ZEVector.h				Sources Headers)
 ze_add_source(ZEVector2Tests.cpp		Tests)
