CHG: Changes have been made in ZEMetaCompiler classes: ZEMCContext, ZEMCGenerator, ZEMCParserType and ZEDS classes: ZEValue, ZEVariant, ZEReference for ZEMatrixd and ZEVectord support. FIX: Several fixes for potential memory leaks and warnings have been made in ZEVariant and ZEValue classes. FIX: Fix for Owner mechanisms of ZEEntity have been made. FIX: Fixes for initialization and deinitialization in ZEUIControl, ZEUIDebugDrawTag and ZEDebugDrawer classes have been made.
svn path=/branches/v0.6.2-ZETrainIG/; revision=1820

--- a/Source/ZEFoundation/ZEMath/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEMath/CMakeLists.txt
@@ -120,8 +120,10 @@ endif()
 
 set(BuildIn ${BuildIn}
 	ZEMath/ZEVector.h
+	ZEMath/ZEVectord.h
 	ZEMath/ZEQuaternion.h
 	ZEMath/ZEMatrix.h	
+	ZEMath/ZEMatrixd.h
 	PARENT_SCOPE)
 
 ze_add_library(TARGET ZEMath 
