IMP: ZERSResource has been further improved. CHG: ZEModelResource has been migrated to ZERSResource. (NOT WORKING - PARTIAL UPDATE) CHG: ZEModelResource* component has been divided in to several files, revised and improved. FIX: ZEList2 operator[] const correct problems has been fixed. FIX: Default values in ZEMLReader has been changed to more appropriote values. FIX: ZESignal has been modified for const correctness.
svn path=/branches/v0.6.3-Resource/; revision=1821

--- a/Source/ZEEngine/ZEResource/CMakeLists.txt
+++ b/Source/ZEEngine/ZEResource/CMakeLists.txt
@@ -40,7 +40,7 @@ ze_add_source(ZERSHolder.h					Sources Headers)
 ze_add_source(ZERSResource.cpp				Sources)
 ze_add_source(ZERSResource.h				Sources Headers ZEMC)
 ze_add_source(ZERSManager.cpp				Sources)
-ze_add_source(ZERSManager.h					Sources Headers)
+ze_add_source(ZERSManager.h					Sources Headers ZEMC)
 
 ze_add_library(TARGET ZEResource
 	ZEMC ${ZEMC}
