--- a/Source/ZEEngine/ZEModel/CMakeLists.txt
+++ b/Source/ZEEngine/ZEModel/CMakeLists.txt
@@ -51,13 +51,23 @@ ze_add_source(ZEModelMesh.cpp				Sources)
 ze_add_source(ZEModelMesh.h					Sources Headers ZEMC)
 ze_add_source(ZEModelMeshLOD.cpp			Sources)
 ze_add_source(ZEModelMeshLOD.h				Sources Headers)
-ze_add_source(ZEModelResource.cpp			Sources)
-ze_add_source(ZEModelResource.h				Sources Headers ZEMC)
 ze_add_source(ZEModelHelper.cpp				Sources)
 ze_add_source(ZEModelHelper.h				Sources Headers ZEMC)
 ze_add_source(ZEModelDebugDrawer.cpp		Sources)
 ze_add_source(ZEModelDebugDrawer.h			Sources Headers)
 
+ze_add_source(ZEModelResource.cpp			Sources)
+ze_add_source(ZEModelResource.h				Sources Headers ZEMC)
+ze_add_source(ZEMDResourceMesh.cpp			Sources)
+ze_add_source(ZEMDResourceMesh.h			Sources Headers ZEMC)
+ze_add_source(ZEMDResourceBone.cpp			Sources)
+ze_add_source(ZEMDResourceBone.h			Sources Headers ZEMC)
+ze_add_source(ZEMDResourcePhysics.cpp		Sources)
+ze_add_source(ZEMDResourcePhysics.h			Sources Headers ZEMC)
+ze_add_source(ZEMDResourceAnimation.cpp		Sources)
+ze_add_source(ZEMDResourceAnimation.h		Sources Headers ZEMC)
+ze_add_source(ZEMDResourceHelper.cpp		Sources)
+ze_add_source(ZEMDResourceHelper.h			Sources Headers ZEMC)
 
 ze_add_library(TARGET ZEModel 
 	ZEMC ${ZEMC} 
