IMP: Cascaded shadow map has been implemented on ZERNDeferredShading.hlsl CHG: ZERNFastLightScattering.hlsl has been revised. CHG: ZERNHDR.hlsl has been revised. FIX: Minor bugs have been fixed on ZERNPrecomputingLightScattering.hlsl CHG: ZERNPrecomputingLightScattering.hlsl has been revised. CHG: ZERNTextureRendering.hlsl has been changed to render texture arrays. CHG: ZERNTransformations.hlsl has been revised. ADD: Keyboard action of showing cascades has been added to ZEGRTestModule.cpp CHG: ZEGRTestModule.cpp has been revised. ADD: Atmosphere entity has been added to ZEGRTestModule.h. ADD: ZEATAtmosphere class that manages atmospheric phenomenons has been added to ZEATAtmosphere module. ADD: ZEATAtmosphericScattering class that creates atmospheric scattering effect has been added to ZEATAtmosphere module. IMP: GetDrawFlags function has been implemented on ZEATSun.cpp ADD: GetConstantBuffer, GetTexture and GetRenderTargets pure virtual functions have been added to ZEGRContext.h ADD: Default constructor has been added to ZEGRDepthStencilBuffer.h REM: ZEGRComparisonFunction enumeration has been removed from ZEGRDepthStencilState.h CHG: ZEGRFormat.h and ZEGRFormat.cpp have been revised. ADD: DepthBias, SlopeScaledDepthBias, DepthBiasClamp and DepthClipEnable state variables and setters/getters have been added to ZEGRRasterizerState.h CHG: Cull direction has been changed cull mode on ZEGRRasterizerState.h ADD: Default constructor has been added to ZEGRRenderTarget.h ADD: ComparisonFunction state variable and setter/getter has been added to ZEGRSamplerState.h ADD: ComparisonFunction enumeration has been added to ZEGRState.h ADD: Texture array support has been added to ZEGRTexture2D class. FIX: Owner entity bounding box issue has been fixed on ZEInteriorRoom.cpp FIX: Camera inverse view matrix issue has been fixed on ZECamera.cpp IMP: Shadow distance and shadow fade distance have been implemented on ZECamera.cpp FIX: Getting screen position has been fixed on ZECamera.cp

--- a/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
+++ b/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
@@ -35,6 +35,10 @@
 
 cmake_minimum_required(VERSION 2.8)
 
+ze_add_source(ZEATAtmosphere.cpp			Sources)
+ze_add_source(ZEATAtmosphere.h				Sources Headers)
+ze_add_source(ZEATAtmosphericScattering.cpp	Sources)
+ze_add_source(ZEATAtmosphericScattering.h	Sources Headers)
 ze_add_source(ZEATSun.cpp					Sources)
 ze_add_source(ZEATSun.h						Sources Headers)
 ze_add_source(ZEATMoon.cpp					Sources)
