ADD: ZEGeographicEntity class has been added as a double precision transformation entity. ZEGeographicEntity can be further improved by making coordinate conversions from geographic coordinate systems. ADD: ZESector class has been added as a referential frame for scene objects as a solution to float precision problems. ADD: ZESectorSelector class has been added as a selection mechanism for which Sectors are visible or active. CHG: Save and Load/Restore functions in ZEEntity and ZEScene has been modernized.
svn path=/branches/v0.6.2-ZETrainIG/; revision=1825

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -87,6 +87,12 @@ ze_add_source(ZESea.cpp					Sources)
 ze_add_source(ZESea.h					Sources Headers ZEMC)
 ze_add_source(ZEFoliage.cpp				Sources)
 ze_add_source(ZEFoliage.h				Sources Headers ZEPP)
+ze_add_source(ZEGeographicEntity.cpp	Sources)
+ze_add_source(ZEGeographicEntity.h		Sources Headers ZEMC)
+ze_add_source(ZESector.cpp				Sources)
+ze_add_source(ZESector.h				Sources Headers ZEMC)
+ze_add_source(ZESectorSelector.cpp		Sources)
+ze_add_source(ZESectorSelector.h		Sources Headers ZEMC)
 
 
 ze_add_library(TARGET ZEGame 
