!!! BROKEN BUILD !!! ADD: ZE_COPY_NO_ACTION, which allows copy but instead creates new instance, class attribute has been added. CHG: Thread syncronization primitives ZEMutex, ZELock, ZEThread, ZESignal and ZELock has been made no copy action. CHG: ZEList2 and ZELink has been made no copy action. FIX: Const casting problems in ZEHolder has been fixed. FIX: LNK4221 warnings in ZEPointer has been supressed. ADD: ZEAABox::Zero constant has been added. FIX: Minor refinement have been made on ZERSResource. CHG: ZEGRHolder and ZERSHolder  has been combined into single ZEHolder class. CHG: ZEMResource structures has been migrated to ZEHolder. CHG: ZEModelMesh and ZEModelBone derivated properties have been changed to made lazy calculations. CHG: Dynamic modification support has been added to ZEModelMesh, ZEModelMeshLOD, ZEModelBone, ZEModelHelper. CHG: ZEModelDraw, which is used for multi material meshes, has been introduced.
svn path=/branches/v0.6.3-Resource/; revision=1833

--- a/Source/ZEEngine/ZEModel/CMakeLists.txt
+++ b/Source/ZEEngine/ZEModel/CMakeLists.txt
@@ -52,7 +52,7 @@ ze_add_source(ZEModelIKChainNode.h			Sources Headers)
 ze_add_source(ZEModelMesh.cpp				Sources)
 ze_add_source(ZEModelMesh.h					Sources Headers ZEMC)
 ze_add_source(ZEModelMeshLOD.cpp			Sources)
-ze_add_source(ZEModelMeshLOD.h				Sources Headers)
+ze_add_source(ZEModelMeshLOD.h				Sources Headers ZEMC)
 ze_add_source(ZEModelHelper.cpp				Sources)
 ze_add_source(ZEModelHelper.h				Sources Headers ZEMC)
 ze_add_source(ZEModelDebugDrawer.cpp		Sources)
