CHG: ZERNFastLightScattering.hlsl has been revised. ADD: SkyAmbientLighting that computes sun directional lighting with sky ambient has been added to ZERNPrecomputingLightScattering.hlsl. CHG: ZERNPrecomputingLightScattering.hlsl has been revised. ADD: Stage pre process flag has been added to stage mask of render command of ZEATAtmosphere. CHG: ZEATAtmosphere has been changed so that managing pre effect and post effect of ZEATAtmosphericScattering. IMP: Sun directional lighting with sky ambient has been implemented in PreProcess function on ZEATAtmosphericScattering. IMP: Rendering sky and aerial perspective effect has been implemented in PostProcess function on ZEATAtmosphericScattering. CHG: ZEATAtmosphericScattering has been revised. ADD: ZERNStagePreProcess which is used before lighting stage has been added to ZERenderer module. ADD: Array of render targets has been added to ZED11Texture3D.
svn path=/branches/v0.6.2-Graphics/; revision=1887

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -95,6 +95,8 @@ ze_add_source(ZERNStageTextureOutput.h 				Sources Headers)
 ze_add_source(ZERNStageTextureOutput.cpp			Sources)
 ze_add_source(ZERNStagePostProcess.h 				Sources Headers)
 ze_add_source(ZERNStagePostProcess.cpp				Sources)
+ze_add_source(ZERNStagePreProcess.h 				Sources Headers)
+ze_add_source(ZERNStagePreProcess.cpp				Sources)
 ze_add_source(ZERNStageShadowmapGeneration.h		Sources Headers)
 ze_add_source(ZERNStageShadowmapGeneration.cpp		Sources)
 ze_add_source(ZERNStageShadowing.h					Sources Headers)
