FIX: Lighting the surfaces which are out of range during point-lighting has been fixed on ZERNDeferredShading.hlsl, ZERNTiledDeferredShading.hlsl and ZERNTiledDeferredShadingCompute.hlsl. CHG: ZERNDeferredShading.hlsl has been revised. ADD: ZERNParticleMaterial.hlsl rendering particles has been added. REM: ZERNParticleRendering.hlsl has been removed because it has been moved into ZERNParticleMaterial.hlsl. CHG: ZERNShading.hlsl has been revised. CHG: Whether a pixel is background or not has been checked on ZERNTiledDeferredShading.hlsl. CHG: ZERNTiledDeferredShading.hlsl has been revised. CHG: ZERNTiledDeferredShadingCompute.hlsl has been revised. IMP: ZEParticle module has been implemented on Directx 11. CHG: ZERNFixedMaterial has been revised. CHG: GetStageMask function has been declared as pure virtual on ZERNMaterial. CHG: ZERNMaterial has been revised. ADD: ZERNParticleMaterial which defines render states and surface properties of a particle has been added to ZERenderer module. ADD: Stage pre effect and stage particle rendering ids have been added to ZERNStageID. CHG: ZERNStageLighting has been revised. ADD: ZERNStageParticleRendering which sets common properties for particle rendering has been added to ZERenderer module.
svn path=/branches/v0.6.2-Graphics/; revision=1894

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -74,6 +74,8 @@ ze_add_source(ZERNSimpleMaterial.cpp 				Sources)
 ze_add_source(ZERNSimpleMaterial.h 					Sources Headers)
 ze_add_source(ZERNFixedMaterial.cpp 				Sources)
 ze_add_source(ZERNFixedMaterial.h 					Sources Headers ZEMC)
+ze_add_source(ZERNParticleMaterial.cpp 				Sources)
+ze_add_source(ZERNParticleMaterial.h 				Sources Headers ZEMC)
 
 ze_add_source(ZERNStage.h 							Sources Headers)
 ze_add_source(ZERNStage.cpp 						Sources)
@@ -101,6 +103,8 @@ ze_add_source(ZERNStageShadowmapGeneration.h		Sources Headers)
 ze_add_source(ZERNStageShadowmapGeneration.cpp		Sources)
 ze_add_source(ZERNStageShadowing.h					Sources Headers)
 ze_add_source(ZERNStageShadowing.cpp				Sources)
+ze_add_source(ZERNStageParticleRendering.h			Sources Headers)
+ze_add_source(ZERNStageParticleRendering.cpp		Sources)
 
 ze_add_library(TARGET ZERenderer 
 	SOURCES ${Sources}
