CHG: ZERNFastLightScattering.hlsl has been revised. CHG: GetViewNormal function has been changed to return normalized value on ZERNGBuffer.hlsl. CHG: ZERNPrecomputingLightScattering.hlsl has been revised. IMP: Sun motion depending key buttons(F1-F2) has been implemented on ZETrainIg module. ADD: ZEATAtmosphere object has been added to ZEWeatherManager. IMP: Managing atmospheric phenomena has been implemented on ZEATAtmosphere.
svn path=/branches/v0.6.2-Graphics/; revision=1895

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -76,6 +76,8 @@ ze_add_source(ZERNFixedMaterial.cpp 				Sources)
 ze_add_source(ZERNFixedMaterial.h 					Sources Headers ZEMC)
 ze_add_source(ZERNParticleMaterial.cpp 				Sources)
 ze_add_source(ZERNParticleMaterial.h 				Sources Headers ZEMC)
+ze_add_source(ZERNAtmosphereMaterial.cpp			Sources)
+ze_add_source(ZERNAtmosphereMaterial.h 				Sources Headers)
 
 ze_add_source(ZERNStage.h 							Sources Headers)
 ze_add_source(ZERNStage.cpp 						Sources)
