CHG: R3000, R1500 R500 Switch types have been defined. FIX: Minor fix in ZETICallbackImplementations for camera update. CHG: Procedural Vegetation attempts have been made but commented out currently.
svn path=/branches/v0.6.2-ZETrainIG/; revision=1896

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -1,6 +1,6 @@
 [Error]
 MinimumLevel = Debug
-LogFileEnabled = true
+LogFileEnabled = false
 LogFilePath = #S:/Logs/ZinekIG-{1}-{0}.log
 LogFileMinimumLevel = Debug
 
