CHG: Further impromvements has been made to ZETrainIG HDR configuration. FIX: Channel selection bug has been fixed.
svn path=/branches/v0.6.2-ZETrainIG/; revision=1897

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -1,6 +1,6 @@
 [Error]
 MinimumLevel = Debug
-LogFileEnabled = false
+LogFileEnabled = true
 LogFilePath = #S:/Logs/ZinekIG-{1}-{0}.log
 LogFileMinimumLevel = Debug
 
