--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -76,8 +76,10 @@ ze_add_source(ZERNFixedMaterial.cpp 				Sources)
 ze_add_source(ZERNFixedMaterial.h 					Sources Headers ZEMC)
 ze_add_source(ZERNParticleMaterial.cpp 				Sources)
 ze_add_source(ZERNParticleMaterial.h 				Sources Headers ZEMC)
-ze_add_source(ZERNAtmosphereMaterial.cpp			Sources)
-ze_add_source(ZERNAtmosphereMaterial.h 				Sources Headers)
+ze_add_source(ZERNSunMaterial.cpp					Sources)
+ze_add_source(ZERNSunMaterial.h 					Sources Headers)
+ze_add_source(ZERNMoonMaterial.cpp					Sources)
+ze_add_source(ZERNMoonMaterial.h 					Sources Headers)
 
 ze_add_source(ZERNStage.h 							Sources Headers)
 ze_add_source(ZERNStage.cpp 						Sources)
