CHG: New input and output mechanisms for ZERNStage has been implemented. FIX: Windows resize bug in ZED11Module has been fixed. FIX: ZERNFixedMaterial DetailBase and DetailNormal has been fixed. ADD: ZERNStageAntiAliasing has been implemented by using SMAA technique. CHG: ZERNStageTextureOutput has been heavily modified and renamed to ZERNStageMultiplexer.
svn path=/branches/v0.6.2-Graphics/; revision=1904

--- a/Source/ZEEngine/ZEGraphics/ZEDSHShaderEditor/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/ZEDSHShaderEditor/CMakeLists.txt
@@ -35,21 +35,23 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZEDSHErrorsWindow.cpp			Sources)
-ze_add_source(ZEDSHErrorsWindow.h			Sources QtMocs)
-ze_add_source(ZEDSHOutputWindow.cpp			Sources)
-ze_add_source(ZEDSHOutputWindow.h			Sources QtMocs)
-ze_add_source(ZEDSHEditorWidget.cpp			Sources)
-ze_add_source(ZEDSHEditorWidget.h			Sources QtMocs)
-ze_add_source(ZEDSHSyntaxHighlighter.cpp	Sources)
-ze_add_source(ZEDSHSyntaxHighlighter.h		Sources QtMocs)
-ze_add_source(ZEDSHMainWindow.cpp			Sources)
-ze_add_source(ZEDSHMainWindow.h				Sources QtMocs)
-ze_add_source(ZEDSHMainWindow.ui			Sources QtUIs)
-ze_add_source(ZEDSHCompileOptionsWindow.cpp	Sources)
-ze_add_source(ZEDSHCompileOptionsWindow.h	Sources QtMocs)
-ze_add_source(ZEDSHCompileOptionsWindow.ui	Sources QtUIs)
-ze_add_source(ZEDSHMain.cpp					Sources)
+ze_add_source(ZEDSHErrorsWindow.cpp				Sources)
+ze_add_source(ZEDSHErrorsWindow.h				Sources QtMocs)
+ze_add_source(ZEDSHOutputWindow.cpp				Sources)
+ze_add_source(ZEDSHOutputWindow.h				Sources QtMocs)
+ze_add_source(ZEDSHEditorWidget.cpp				Sources)
+ze_add_source(ZEDSHEditorWidget.h				Sources QtMocs)
+ze_add_source(ZEDSHEditorLineNumbersWidget.cpp	Sources)
+ze_add_source(ZEDSHEditorLineNumbersWidget.h	Sources)
+ze_add_source(ZEDSHSyntaxHighlighter.cpp		Sources)
+ze_add_source(ZEDSHSyntaxHighlighter.h			Sources QtMocs)
+ze_add_source(ZEDSHMainWindow.cpp				Sources)
+ze_add_source(ZEDSHMainWindow.h					Sources QtMocs)
+ze_add_source(ZEDSHMainWindow.ui				Sources QtUIs)
+ze_add_source(ZEDSHCompileOptionsWindow.cpp		Sources)
+ze_add_source(ZEDSHCompileOptionsWindow.h		Sources QtMocs)
+ze_add_source(ZEDSHCompileOptionsWindow.ui		Sources QtUIs)
+ze_add_source(ZEDSHMain.cpp						Sources)
 
 qt4_wrap_cpp(QtMocFiles ${QtMocs})
 qt4_wrap_ui(QtUIFiles ${QtUIs})
