--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -97,8 +97,8 @@ ze_add_source(ZERNStageHDR.h 						Sources Headers)
 ze_add_source(ZERNStageHDR.cpp 						Sources)
 ze_add_source(ZERNStageForward.h 					Sources Headers)
 ze_add_source(ZERNStageForward.cpp 					Sources)
-ze_add_source(ZERNStageTextureOutput.h 				Sources Headers)
-ze_add_source(ZERNStageTextureOutput.cpp			Sources)
+ze_add_source(ZERNStageMultiplexer.h 				Sources Headers)
+ze_add_source(ZERNStageMultiplexer.cpp				Sources)
 ze_add_source(ZERNStagePostProcess.h 				Sources Headers)
 ze_add_source(ZERNStagePostProcess.cpp				Sources)
 ze_add_source(ZERNStagePreProcess.h 				Sources Headers)
@@ -109,6 +109,10 @@ ze_add_source(ZERNStageShadowing.h					Sources Headers)
 ze_add_source(ZERNStageShadowing.cpp				Sources)
 ze_add_source(ZERNStageParticleRendering.h			Sources Headers)
 ze_add_source(ZERNStageParticleRendering.cpp		Sources)
+ze_add_source(ZERNStageAntiAliasing.h				Sources Headers)
+ze_add_source(ZERNStageAntiAliasing.cpp				Sources)
+ze_add_source(ZERNStageOutput.h 					Sources Headers)
+ze_add_source(ZERNStageOutput.cpp					Sources)
 
 ze_add_library(TARGET ZERenderer 
 	SOURCES ${Sources}
