CHG: ZERNDeferredShading.hlsl has been revised. CHG: ZELight, ZELightDirectional, ZELightProjective, ZELightPoint and ZELightOmniProjective have been revised. ADD: ZERNStageDebug class which manages debugging process(showing normals, bounding box etc.) has been added to ZERenderer module. ADD: ZERN_STAGE_DEBUG id has been added to ZERNStageID. CHG: ZERNStageLighting has been revised. CHG: ZERNStageMultiplexer has been revised. ADD: ZERNFixedMaterialDebug.hlsl which renders desired debug output has been added.
svn path=/branches/v0.6.2-Graphics/; revision=1907

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -113,6 +113,8 @@ ze_add_source(ZERNStageAntiAliasing.h				Sources Headers)
 ze_add_source(ZERNStageAntiAliasing.cpp				Sources)
 ze_add_source(ZERNStageOutput.h 					Sources Headers)
 ze_add_source(ZERNStageOutput.cpp					Sources)
+ze_add_source(ZERNStageDebug.h 						Sources Headers)
+ze_add_source(ZERNStageDebug.cpp					Sources)
 
 ze_add_library(TARGET ZERenderer 
 	SOURCES ${Sources}
