--- a/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
+++ b/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
@@ -49,6 +49,8 @@ ze_add_source(ZEATCommon.cpp				Sources)
 ze_add_source(ZEATCommon.h					Sources Headers)
 ze_add_source(ZEATAstronomy.cpp				Sources)
 ze_add_source(ZEATAstronomy.h				Sources Headers)
+ze_add_source(ZEATFog.cpp					Sources)
+ze_add_source(ZEATFog.h						Sources Headers)
 
 ze_add_library(TARGET ZEAtmosphere 
 	ZEMC ${ZEMC}
