--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -41,15 +41,15 @@ ze_add_source(ZECamera.cpp							Sources)
 ze_add_source(ZECamera.h							Sources Headers ZEMC)
 
 ze_add_source(ZERNRenderer.cpp 						Sources)
-ze_add_source(ZERNRenderer.h 						Sources Headers)
+ze_add_source(ZERNRenderer.h 						Sources Headers ZEMC)
 ze_add_source(ZERNCommand.cpp 						Sources)
-ze_add_source(ZERNCommand.h 						Sources Headers)
+ze_add_source(ZERNCommand.h 						Sources Headers ZEMC)
 ze_add_source(ZERNCuller.cpp						Sources)
 ze_add_source(ZERNCuller.h							Sources Headers)
 ze_add_source(ZERNView.cpp							Sources)
-ze_add_source(ZERNView.h							Sources Headers)
+ze_add_source(ZERNView.h							Sources Headers ZEMC)
 ze_add_source(ZERNRenderParameters.cpp				Sources)
-ze_add_source(ZERNRenderParameters.h				Sources Headers)
+ze_add_source(ZERNRenderParameters.h				Sources Headers ZEMC)
 ze_add_source(ZERNFilter.cpp						Sources)
 ze_add_source(ZERNFilter.h							Sources Headers)
 
@@ -81,37 +81,37 @@ ze_add_source(ZERNSunMaterial.h 					Sources Headers)
 ze_add_source(ZERNMoonMaterial.cpp					Sources)
 ze_add_source(ZERNMoonMaterial.h 					Sources Headers)
 
-ze_add_source(ZERNStage.h 							Sources Headers)
+ze_add_source(ZERNStage.h 							Sources Headers ZEMC)
 ze_add_source(ZERNStage.cpp 						Sources)
-ze_add_source(ZERNStageID.h 						Sources Headers)
+ze_add_source(ZERNStageID.h 						Sources Headers ZEMC)
 ze_add_source(ZERNStageID.cpp 						Sources)
-ze_add_source(ZERNStageManager.h 					Sources Headers)
+ze_add_source(ZERNStageManager.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageManager.cpp 					Sources)
-ze_add_source(ZERNStageGBuffer.h 					Sources Headers)
+ze_add_source(ZERNStageGBuffer.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageGBuffer.cpp 					Sources)
-ze_add_source(ZERNStageAO.h 						Sources Headers)
+ze_add_source(ZERNStageAO.h 						Sources Headers ZEMC)
 ze_add_source(ZERNStageAO.cpp 						Sources)
-ze_add_source(ZERNStageLighting.h 					Sources Headers)
+ze_add_source(ZERNStageLighting.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageLighting.cpp					Sources)
-ze_add_source(ZERNStageHDR.h 						Sources Headers)
+ze_add_source(ZERNStageHDR.h 						Sources Headers ZEMC)
 ze_add_source(ZERNStageHDR.cpp 						Sources)
-ze_add_source(ZERNStageForward.h 					Sources Headers)
+ze_add_source(ZERNStageForward.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageForward.cpp 					Sources)
-ze_add_source(ZERNStageMultiplexer.h 				Sources Headers)
+ze_add_source(ZERNStageMultiplexer.h 				Sources Headers ZEMC)
 ze_add_source(ZERNStageMultiplexer.cpp				Sources)
-ze_add_source(ZERNStagePostProcess.h 				Sources Headers)
+ze_add_source(ZERNStagePostProcess.h 				Sources Headers ZEMC)
 ze_add_source(ZERNStagePostProcess.cpp				Sources)
-ze_add_source(ZERNStagePreProcess.h 				Sources Headers)
+ze_add_source(ZERNStagePreProcess.h 				Sources Headers ZEMC)
 ze_add_source(ZERNStagePreProcess.cpp				Sources)
-ze_add_source(ZERNStageShadowmapGeneration.h		Sources Headers)
+ze_add_source(ZERNStageShadowmapGeneration.h		Sources Headers ZEMC)
 ze_add_source(ZERNStageShadowmapGeneration.cpp		Sources)
-ze_add_source(ZERNStageShadowing.h					Sources Headers)
+ze_add_source(ZERNStageShadowing.h					Sources Headers ZEMC)
 ze_add_source(ZERNStageShadowing.cpp				Sources)
-ze_add_source(ZERNStageParticleRendering.h			Sources Headers)
+ze_add_source(ZERNStageParticleRendering.h			Sources Headers ZEMC)
 ze_add_source(ZERNStageParticleRendering.cpp		Sources)
-ze_add_source(ZERNStageAntiAliasing.h				Sources Headers)
+ze_add_source(ZERNStageAntiAliasing.h				Sources Headers ZEMC)
 ze_add_source(ZERNStageAntiAliasing.cpp				Sources)
-ze_add_source(ZERNStageOutput.h 					Sources Headers)
+ze_add_source(ZERNStageOutput.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageOutput.cpp					Sources)
 ze_add_source(ZERNStageDebug.h 						Sources Headers)
 ze_add_source(ZERNStageDebug.cpp					Sources)
