ADD: New stages ZERNStageInputTexture and ZERNStageOutputTexture has been added.
svn path=/branches/v0.6.2-Graphics/; revision=1920

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -87,6 +87,12 @@ ze_add_source(ZERNStageID.h 						Sources Headers ZEMC)
 ze_add_source(ZERNStageID.cpp 						Sources)
 ze_add_source(ZERNStageManager.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageManager.cpp 					Sources)
+ze_add_source(ZERNStageInputTexture.h 				Sources Headers ZEMC)
+ze_add_source(ZERNStageInputTexture.cpp				Sources)
+ze_add_source(ZERNStageOutput.h 					Sources Headers ZEMC)
+ze_add_source(ZERNStageOutput.cpp					Sources)
+ze_add_source(ZERNStageOutputTexture.h 				Sources Headers ZEMC)
+ze_add_source(ZERNStageOutputTexture.cpp			Sources)
 ze_add_source(ZERNStageGBuffer.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageGBuffer.cpp 					Sources)
 ze_add_source(ZERNStageAO.h 						Sources Headers ZEMC)
@@ -111,8 +117,6 @@ ze_add_source(ZERNStageParticleRendering.h			Sources Headers ZEMC)
 ze_add_source(ZERNStageParticleRendering.cpp		Sources)
 ze_add_source(ZERNStageAntiAliasing.h				Sources Headers ZEMC)
 ze_add_source(ZERNStageAntiAliasing.cpp				Sources)
-ze_add_source(ZERNStageOutput.h 					Sources Headers ZEMC)
-ze_add_source(ZERNStageOutput.cpp					Sources)
 ze_add_source(ZERNStageDebug.h 						Sources Headers)
 ze_add_source(ZERNStageDebug.cpp					Sources)
 
