CHG: ZERNCloud.hlsl has been revised. CHG: ZERNDeferredShading.hlsl has been revised. CHG: ZERNFastLightScattering.hlsl has been revised. CHG: ZERNFog.hlsl has been revised. IMP: Directional lighting has been implemented on ZERNTiledDeferredShadingCompute.hlsl. IMP: SetFogStartDistance function has been implemented on ZETIWeatherManager. IMP: Depth-test has been enabled on ZEATAtmosphere. REN: SetRange function has been renamed as SetStartDistance in ZEATFog. CHG: ZECloud has been revised. CHG: Default depth function has been changed from GREATER_EQUAL to GREATER on ZEGRDepthStencilState. CHG: ZERNStageDebug has been revised. IMP: Directional light setup for compute tiled deferred has been implemented on ZERNStageLighting. CHG: ZERNStagePostProcess has been revised. IMP: Read-only depth stencil view option has been implemented on ZED11Texture2D.
svn path=/branches/v0.6.2-Graphics/; revision=1930

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -117,7 +117,7 @@ ze_add_source(ZERNStageParticleRendering.h			Sources Headers ZEMC)
 ze_add_source(ZERNStageParticleRendering.cpp		Sources)
 ze_add_source(ZERNStageAntiAliasing.h				Sources Headers ZEMC)
 ze_add_source(ZERNStageAntiAliasing.cpp				Sources)
-ze_add_source(ZERNStageDebug.h 						Sources Headers)
+ze_add_source(ZERNStageDebug.h 						Sources Headers ZEMC)
 ze_add_source(ZERNStageDebug.cpp					Sources)
 
 ze_add_library(TARGET ZERenderer 
