IMP: Multi-directional lighting has been implemented on ZERNDeferredShading.hlsl. CHG: ZERNDeferredShading.hlsl has been revised. CHG: ZERNFastLightScattering.hlsl has been revised. REN: ZERNMoonMaterial.hlsl has been renamed ZERNMoon.hlsl. IMP: Extinction of moon light in atmosphere has been implemented on ZERNMoon.hlsl. CHG: ZERNMoon.hlsl has been revised. CHG: "Fov" member of ZERNShading_Light struct has been changed to CosZenith on ZERNShading.hlsl. REN: ZERNSunMaterial.hlsl has been renamed ZERNSun.hlsl. IMP: Extinction of sun light in atmosphere has been implemented on ZERNSun.hlsl. CHG: ZERNSun.hlsl has been revised. IMP: Omniprojective lighting has been implemented on ZERNTiledDeferredShadingCompute.hlsl. CHG: ZERNTiledDeferredShadingCompute.hlsl has been revised. CHG: Sun and moon direction vector has been reversed on ZEATAstronomy.cpp. CHG: Blend-state has been changed to additive on ZEATAtmosphere. CHG: ZEATAtmosphere has been revised. REN: ZECloud has been renamed ZEATCloud. IMP: Material properties of moon has been implemented on ZEATMoon. IMP: Material properties of sun has been implemented on ZEATSun. ADD: SetComputeRenderState pure virtual function has been added to ZEGRContext. ADD: CreateComputeRenderStateData pure virtual function has been added to ZEGRGraphicsModule. IMP: ZEGRComputeRenderState and ZEGRComputeRenderStateData classes have been implemented on ZEGRRenderState. IMP: Enabled and visible checks have been implemented in PreRender function on ZELight. CHG: ZELightDirectional has been revised. REM: ZERNMoonMaterial has been removed. IMP: Multi-directional light in deferred shading has been implemented on ZERNStageLighting. CHG: Tiled deferred compute render state has been changed to ZEGRComputeRenderState on ZERNStageLighting. CHG: ZERNStageLighting has been revised. CHG: ZERNStagePostProcess has been revised. REM: ZERNSunMaterial has been removed. IMP: SetComputeRenderState pure virtual function has been implemented on ZED11Context. IMP:

--- a/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
+++ b/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
@@ -51,6 +51,8 @@ ze_add_source(ZEATAstronomy.cpp				Sources)
 ze_add_source(ZEATAstronomy.h				Sources Headers)
 ze_add_source(ZEATFog.cpp					Sources)
 ze_add_source(ZEATFog.h						Sources Headers)
+ze_add_source(ZEATCloud.cpp					Sources)
+ze_add_source(ZEATCloud.h					Sources Headers)
 
 ze_add_library(TARGET ZEAtmosphere 
 	ZEMC ${ZEMC}
