ADD: ZESectorManager class has been added. CHG: ZESector mechanism has been revised and changes in ZEGeographicEntity, ZESector, ZESectorManager, ZETISectorManager has been made accordingly. DEL: ZETISector class in ZETrainIG project has been removed.
svn path=/branches/v0.6.2-Graphics/; revision=1938

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -81,6 +81,8 @@ ze_add_source(ZEGeographicEntity.cpp	Sources)
 ze_add_source(ZEGeographicEntity.h		Sources Headers ZEMC)
 ze_add_source(ZESector.cpp				Sources)
 ze_add_source(ZESector.h				Sources Headers ZEMC)
+ze_add_source(ZESectorManager.cpp		Sources)
+ze_add_source(ZESectorManager.h			Sources Headers ZEMC)
 ze_add_source(ZESectorSelector.cpp		Sources)
 ze_add_source(ZESectorSelector.h		Sources Headers ZEMC)
 
