CHG: ZERNCloud.hlsl has been revised. CHG: ZERNMoon.hlsl has been revised. CHG: ZERNSkyBox.hlsl has been revised. CHG: ZERNSun.hlsl has been revised. IMP: Cloud, fog and stars management has been implemented on ZEATAtmosphere. CHG: ZEATCloud has been revised. CHG: ZEATFog has been revised. IMP: Moon screen position according to asymetric frustum has been implemented on ZEATMoon. ADD: ZEATSkyBox has been added to ZEATAtmosphere module. IMP: Sun screen position according to asymetric frustum has been implemented on ZEATSun. REM: ZESkyBrush has been removed from ZEGame module.
svn path=/branches/v0.6.2-Graphics/; revision=1942

--- a/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
+++ b/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
@@ -53,6 +53,8 @@ ze_add_source(ZEATFog.cpp					Sources)
 ze_add_source(ZEATFog.h						Sources Headers)
 ze_add_source(ZEATCloud.cpp					Sources)
 ze_add_source(ZEATCloud.h					Sources Headers)
+ze_add_source(ZEATSkyBox.cpp				Sources)
+ze_add_source(ZEATSkyBox.h					Sources Headers)
 
 ze_add_library(TARGET ZEAtmosphere 
 	ZEMC ${ZEMC}
