REM: Old shaders has been removed from ZEEngine resource. FIX: Fixed memory problem whne ZECore prints current version has been fixed. MOD: Input facilities has been moved to new ZERNStageMultiplexerInput. ADD: Many image operations (clip, zoom, flip, offset) support has been added to ZERNStageMultiplexerInput.cpp MOD: ZERNStageMultiplexer has been modified to use ZERNStageMultiplexerInput for inputs. ADD: New shader constant buffer identifier ZERN_SHADER_CONSTANT_STAGE has been added. REM: Left over file ZERNShaderConfig.h has been removed. ADD: New ZEMLReaderNode::GetPath, which is used for retriving path of the current node, function has been added for improving error/warning messages. ADD: New warning and error checks hass been added to ZEMLProvider and ZEMLReader.
svn path=/branches/v0.6.2-Graphics/; revision=1950

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -101,6 +101,8 @@ ze_add_source(ZERNStageForward.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageForward.cpp 					Sources)
 ze_add_source(ZERNStageMultiplexer.h 				Sources Headers ZEMC)
 ze_add_source(ZERNStageMultiplexer.cpp				Sources)
+ze_add_source(ZERNStageMultiplexerInput.h 			Sources Headers ZEMC)
+ze_add_source(ZERNStageMultiplexerInput.cpp			Sources)
 ze_add_source(ZERNStagePostProcess.h 				Sources Headers ZEMC)
 ze_add_source(ZERNStagePostProcess.cpp				Sources)
 ze_add_source(ZERNStagePreProcess.h 				Sources Headers ZEMC)
